# evoc-rs

./: .gitignore  ARCHITECTURE.md  AUTHORS.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CITATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  build.rs
benches/: README.md  evoc_bench.rs
benches/history/20260528-020928/: meta.json  rust_cargo_bench_output.txt
examples/: README.md  bbc_news_clustering.rs  cluster_in_memory.rs  fashion_mnist_clustering.rs  mnist_clusters.py  news_clustering.rs  render_readme_figures.py  user_clustering.rs
native/: fast_cosine.c
scripts/: bench_backends.sh  bench_mnist.py  bench_speed.py  dump_node_embedding_epochs.py  generate_parity_fixtures.py  numpy_argsort_stdin.py  parity_import.py  record_benchmarks.py
src/: bbc_news_data.rs  boruvka.rs  cluster_trees.rs  cluster_util.rs  clustering.rs  csr_matmul.rs  dataset_util.rs  disjoint_set.rs  embed.rs  fashion_mnist_data.rs  fast_cosine.rs  graph_construction.rs  heap.rs  idx_digits.rs  kdtree.rs  knn.rs  label_prop.rs  lib.rs  mnist_data.rs  news20_data.rs  np_argsort.rs  numpy_rng.rs  rng.rs  text_bow.rs
src/nndescent/: common.rs  float.rs  int8.rs  mod.rs  uint8.rs
src/rlx_backend/: delegate.rs  mod.rs  strict.rs
tests/: backend_metal_smoke.rs  backend_resolve.rs  backend_strict_equivalence.rs  graph_parity.rs  parity.rs  parity_intermediates.rs  parity_reduced_init_canned.rs  smoke.rs
tests/fixtures/: summary.json
tests/fixtures/_bench_tmp/: data_2000_64_10_42.npy
tests/fixtures/large_2000/: data.npy  labels.npy  meta.json  nn_dists.npy  nn_inds.npy
tests/fixtures/large_2000/intermediates/: emb_after_epoch20_single.npz  emb_state_epoch19_end.npz  emb_state_epoch20.npz  embedding.npy  graph_coo.npz  graph_csr_ref.npz  norm_transpose.npz  normalized_reduction_map.npz  partition.npy  pca_init_ref.npy  pca_inner_data.npy  pca_inner_ref.npy  pre_scale_result.npy  py_node_orders_10.npz  py_orders_full.npz  py_state_after19.npz  reduced_data.npy  reduced_graph_coo.npz  reduced_graph_csr.npz  reduced_init.npy  reduced_layout.npy  rng_after_emb_key.npy  rng_after_emb_meta.npz  rng_after_init_key.npy  rng_after_init_meta.npz  rng_after_knn_key.npy  rng_after_partition_meta.npz  rng_after_reduced_init_key.npy  rng_after_reduced_init_meta.npz  rust_emb_after19.npy  rust_emb_epoch_diff.npy  rust_eon_after19.npy  rust_eos_after19.npy  rust_full_seed_emb.npy  rust_node_order_000.npy  rust_node_order_001.npy  rust_node_order_002.npy  rust_node_order_003.npy  rust_node_order_004.npy  rust_node_order_005.npy  (+21 more)
tests/fixtures/large_2000/intermediates/emb_epochs/: emb_epoch_000.npy  emb_epoch_001.npy  emb_epoch_002.npy  emb_epoch_003.npy  emb_epoch_004.npy  emb_epoch_005.npy  emb_epoch_006.npy  emb_epoch_007.npy  emb_epoch_008.npy  emb_epoch_009.npy  emb_epoch_010.npy  emb_epoch_011.npy  emb_epoch_012.npy  emb_epoch_013.npy  emb_epoch_014.npy  emb_epoch_015.npy  emb_epoch_016.npy  emb_epoch_017.npy  emb_epoch_018.npy  emb_epoch_019.npy  emb_epoch_020.npy  emb_epoch_021.npy  emb_epoch_022.npy  emb_epoch_023.npy  emb_epoch_024.npy  emb_epoch_025.npy  emb_epoch_026.npy  emb_epoch_027.npy  emb_epoch_028.npy  emb_epoch_029.npy  emb_epoch_030.npy  emb_epoch_031.npy  emb_epoch_032.npy  emb_epoch_033.npy  emb_epoch_034.npy  emb_epoch_035.npy  emb_epoch_036.npy  emb_epoch_037.npy  emb_epoch_038.npy  emb_epoch_039.npy  (+10 more)
tests/fixtures/medium_800/: data.npy  labels.npy  leaf_array.npy  meta.json  nn_dists.npy  nn_inds.npy
tests/fixtures/medium_800/intermediates/: directed_coo.npz  embedding.npy  graph_coo.npz  graph_csr_fresh.npz  graph_csr_ref.npz  graph_rust_coo.txt  init_embedding.npy  inner_graph_csr.npz  inner_partition.npy  inner_pca_init.npy  inner_reduced_data.npy  inner_rng_before_pca_meta.npz  labels_after_outliers.npy  labels_iter0.npy  labels_iter0_rust.npy  labels_iter1.npy  labels_iter10.npy  labels_iter2.npy  labels_seeded.npy  mst_argsort_order.npy  partition.npy  pre_scale_result.npy  py_boruvka_edges.npy  py_condensed.npz  py_core_distances.npy  py_kdtree_idx_array.npy  py_linkage.npy  reduced_data.npy  reduced_eps.npy  reduced_graph_coo.npz  reduced_graph_csr.npz  reduced_init.npy  reduced_layout.npy  rhos.npy  rng_after_emb_key.npy  rng_after_emb_meta.npz  rng_after_init_key.npy  rng_after_init_meta.npz  rng_after_knn_key.npy  rng_after_knn_meta.npz  (+7 more)
tests/fixtures/small_200/: data.npy  labels.npy  meta.json  nn_dists.npy  nn_inds.npy
tests/fixtures/small_200/intermediates/: embedding.npy  graph_coo.npz  init_embedding.npy  rng_after_emb_key.npy  rng_after_emb_meta.npz  rng_after_init_key.npy  rng_after_init_meta.npz
(+49 files in other folders)
